--- a/packages/graphql_web_socket_client/pubspec.yaml
+++ b/packages/graphql_web_socket_client/pubspec.yaml
@@ -1,7 +1,7 @@
 name: graphql_web_socket_client
 description: A starting point for Dart libraries or applications.
 version: 1.0.0
-# repository: https://github.com/my_org/my_repo
+publish_to: none
 
 environment:
   sdk: ^3.6.0
@@ -9,6 +9,8 @@ environment:
 # Add regular dependencies here.
 dependencies:
   graphql_web_socket_core:
+    path: ../graphql_web_socket_core
+
   gql: ^1.0.0
   web_socket_channel: ^3.0.2
   uuid: ^4.5.1
