--- a/packages/graphql_web_socket_link/pubspec.yaml
+++ b/packages/graphql_web_socket_link/pubspec.yaml
@@ -1,6 +1,7 @@
 name: graphql_web_socket_link
 description: A starting point for Dart libraries or applications.
 version: 1.0.0
+publish_to: none
 
 environment:
   sdk: ^3.5.4
@@ -11,6 +12,7 @@ dependencies:
   gql_link: ^1.0.0+1
 
   graphql_web_socket_client:
+    path: ../graphql_web_socket_client
 
 dev_dependencies:
   test: ^1.25.8
